# kb_nano

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  engine.py  mint.json  paths.py  pyproject.toml  test.py  weight_loader.py
L1/: flash_attn_decode.py  moe_align.py  rms_norm.py  silu_and_mul.py
L2/: attention.py  fused_experts.py  llama_mlp.py  mixtral_moe.py
L3/: mixtral_decoder.py
L4/: llama.py  mixtral.py
agent/: __main__.py  agent.py  create_stubs.py
audits/hf_transformers_coverage/: CAVEATS_AND_METHODOLOGY.md  CONSISTENCY_AUDIT.md  MENTOR_REVIEW_audit_methodology.md  NUMBER_DRIFT_RECONCILIATION.md  README.md  VERIFICATION_GUIDELINES.md  _reaudit_final_v10.json  _reaudit_final_v11.json  _reaudit_final_v5.json  _reaudit_final_v9.json  appendix_hf_coverage_rows.tex  appendix_hf_coverage_rows_texttt.tex  audit_evidence.csv  audit_methodology.md  coverage_summary.md  hf_architecture_operator_coverage.csv  hf_coverage_rows.tex  hf_extract.jsonl  kb_nano_operator_catalog.csv  unsupported_operator_summary.csv
bench/: __init__.py  __main__.py  discovery.py  replacement.py  runner.py
bench/datasets/: __init__.py  build_real_prompts.py  publish_real_prompts.py
bench/e2e/: __main__.py  engines.py  eval.py  latency.py  serve.py  throughput.py
bench/eval/: __main__.py  aggregator.py  config.py  planner.py  runner.py
bench/kernels/: __main__.py  evaluator.py  ncu_profiler.py  result.py  runner.py  scenario_pipeline.py  scenario_registry.py  scenario_schema.py
bench/tracking/: __init__.py  history.py  tracker.py
bench/utils/: build_input_registry.py  capture_golden.py  datasets.py  generate_inputs.py  input_registry.py  input_trace_models.example.yaml  materialize_kernelagent_inputs.py  real_prompts.py  trace_inputs.py  trace_schema.py  validate_input_registry.py  worker.py  workloads.py
docs/: abstract.tex  architecture.mdx  benchmarking.mdx  building-an-agent.mdx  developer-guide.mdx  docs.json  experiment-tracking.mdx  getting-started.mdx  intro.mdx  reference.mdx  user_guide.md
example/: __main__.py  agent.py  create_stubs.py  llm_api.py
infra/: JAMBA_TP_SCOPE.md  compilation.py  context.py  cuda_graph.py  custom_allreduce.py  custom_ops.py  detection_loader.py  diffusion_engine.py  dllm_engine.py  dp3_engine.py  eagle3_cuda_graph.py  eagle3_engine.py  embedder_loader.py  embedding_engine.py  engine.py  fla_engine.py  gla_state.py  graphics_loader.py  image_cls_loader.py  jamba_engine.py  kernel_swapper.py  kimi_linear_metadata.py  kimi_linear_state.py  llada_loader.py  mamba_state.py  nerf_loader.py  oasis_engine.py  passes.py  pi0_engine.py  pointcloud_loader.py  rwkv7_state.py  sdxl_engine.py  server.py  tp.py  ttt_e2e_engine.py  weight_loader.py
ops/: __init__.py  attention.py  norm.py  rotary.py
standalone_llama/: engine.py  test.py
standalone_llama/models/: __init__.py  llama31.py  mixtral.py
standalone_llama/ops/: context.py  fused_moe.py  tp.py
tasks/L1/: allreduce.py  embedding.py  moe_align.py  moe_grouped_gemm.py  moe_sum.py  rotary_emb.py  silu_and_mul.py  softmax.py  topk.py
tasks/L2/: attention.py  fused_experts.py  llama_mlp.py  mixtral_moe.py  parallel_embedding.py  (+5 more)
tests/: analyze_prefill_token_ranks.py  bench_3dgs.py  bench_detection.py  bench_diffusers.py  bench_dllm.py  bench_dp3.py  bench_embedding.py  bench_fla.py  bench_hunyuan_video.py  bench_image_cls.py  bench_instantngp.py  bench_instantngp_kernels.py  bench_jamba.py  bench_microsoft_bitnet.py  bench_moe.py  bench_oasis.py  bench_openfold3.py  bench_openpi.py  bench_openpi_aloha.py  bench_pointcloud.py  bench_recsys.py  bench_sam.py  bench_sglang.py  bench_throughput.py  bench_timm.py  bench_ttt_e2e.py  bench_ttt_e2e_jax_worker.py  bench_vjepa2.py  bench_vllm.py  bench_vllm_omni.py  diff_bitnet_decode.py  diff_bitnet_layers.py  generate_vllm_baselines.py  profile_llama_tp1.py  profile_mixtral_detail.py  score_sglang_rank_alignment.py  setup_sglang_env.sh  test_against_baselines.py  test_bench.py  test_bench_redesign.py  (+12 more)
(+873 files in other folders)
