[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb_nano"
version = "0.1.0"
description = "A CUDA kernel benchmarking library for LLM inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
    "transformers==4.57.6",
    "tqdm",
    "vllm==0.16.0",
    "sgl-kernel",
    "decord",
    "mlflow>=2.10",
    "fastsafetensors",
    "deep-gemm @ git+https://github.com/deepseek-ai/DeepGEMM.git@v2.1.1.post3",
    "flash_mla @ git+https://github.com/deepseek-ai/FlashMLA.git",
]

[project.optional-dependencies]
tracking = ["mlflow>=2.10"]

[project.scripts]
kb_nano = "kb_nano.__main__:main"

[tool.setuptools.package-dir]
"kb_nano" = "."
