[build-system]
requires = ["setuptools>=64", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kb_nano"
version = "0.1.0"
description = "A CUDA kernel benchmarking library for LLM inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
    "transformers",
    "tqdm",
    "flash-attn",
    "vllm==0.18.0",
    "deep-gemm @ git+https://github.com/deepseek-ai/DeepGEMM.git@v2.1.1.post3",
    "decord",
    "mlflow>=2.10",
    "datasets",
    "diffusers>=0.37",
    "peft>=0.17.0",
    "sam3 @ git+https://github.com/sfc-gh-goliaro/sam3.git",
    "openfold3 @ git+https://github.com/aqlaboratory/openfold-3.git",
    "pycocotools",
    "timm",
    "fastsafetensors",
]

[project.optional-dependencies]
tracking = ["mlflow>=2.10"]

[project.scripts]
kb_nano = "kb_nano.__main__:main"

[tool.uv]
find-links = [
    "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/expanded_assets/v0.9.0",
]
no-build-isolation-package = ["flash-attn", "deep-gemm"]

[tool.setuptools.package-dir]
"kb_nano" = "."
